[package]
name = "otepia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.27.0", features = ["bundled"] }
pyo3 = {version = "0.16.1", features = ["auto-initialize"]}
rpassword = "5.0.1"
regex = "1.5.5"
